# HiAcsDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/hiacsdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniImp.cpp
app/src/main/java/com/example/hiacsdemo/: MainActivity.java
app/src/main/java/com/hik/common/: HiAcs.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/hiacsdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
